fix landing section mobile view

--- a/src/pages/main-page/assets/landing-section.module.scss
+++ b/src/pages/main-page/assets/landing-section.module.scss
@@ -27,7 +27,12 @@
         z-index: -3;
         width: 100vw;
         height: 100%;
+        min-height: 900px;
         object-fit: cover;
+
+        @include breakpoint-xs {
+            min-height: 1050px;
+        }
     }
 
     .overlay {
@@ -40,6 +45,11 @@
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
         height: 100%;
         object-fit: cover;
+        min-height: 900px;
+
+        @include breakpoint-xs {
+            min-height: 1050px;
+        }
     }
 
     * > svg {
@@ -90,6 +100,8 @@
             justify-content: space-around;
             align-items: center;
             width: 80%;
+            flex-wrap: wrap;
+            gap: 20px;
 
             .sectionButton {
                 font-family: $alata;
@@ -125,8 +137,11 @@
         }
 
         .sectionNumberContainer {
-            display: grid;
-            grid-template-columns: 40% 50% 10%;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            gap: 20px;
+            flex-wrap: wrap;
             width: 80%;
 
             .sectionMemberNumber {
